(test
 (name random3_test)
 (libraries random3)
 (modules Random3_test)
)

(test
 (name random4_test)
 (libraries random4)
 (modules Random4_test)
)

(test
 (name
   random5_test)
 (libraries randomV.v5 randomV.v5o)
 (modules Random5_test)
)

(test
 (name consistency)
 (libraries random3 random4 random5)
 (preprocess
  (action
   (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (modules Consistency)
)
