(test
 (name random3_test)
 (libraries random3)
 (modules Random3_test)
)

(test
 (name random4_test)
 (libraries random4)
 (modules Random4_test)
)

(test
 (name random5_test)
 (libraries random5 random5o)
 (modules Random5_test)
)

(tests
 (names binary_string_roundtrip binary_string_stability chi2)
 (modules binary_string_roundtrip binary_string_stability chi2)
 (libraries random3 random4 random5 random5o)
)

(test
 (name consistency)
 (libraries random3 random4 random5 random5o)
 (preprocess
  (action
   (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (modules Consistency)
)
